# rustdemos

./: README.md
adder/src/: lib.rs  main.rs
adder/tests/: integration_test.rs  more_int_tests.rs
adder/tests/common/: mod.rs
blog/src/: lib.rs
blog2/: Cargo.toml
blog2/src/: lib.rs  main.rs
collections/src/: main.rs
concurrency/src/: main.rs
guessing_game/src/: main.rs
gui/src/: lib.rs  main.rs
lifetimes/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
rectangles/src/: main.rs
rest/: Cargo.toml
rest/src/: main.rs
restaurant/src/: front_of_house.rs  lib.rs
restaurant/src/front_of_house/: serving.rs
webserver/: sleep.html
webserver/src/: lib.rs
